--- a/app/views/teams/_owned_teams.html.erb
+++ b/app/views/teams/_owned_teams.html.erb
@@ -10,7 +10,7 @@
   <% else %>
     <div class="flex flex-col gap-6 items-center justify-center py-12">
       <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400">You don't have any teams yet.</p>
-      <%= link_to 'Create a team', new_team_path, class: 'btn btn-white' %>
+      <%= link_to 'Create a team', new_team_path, class: 'btn btn-primary' %>
     </div>
   <% end %>
 </div>
