--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -32,22 +32,56 @@
         <% end %>
       <% else %>
         <div class="flex flex-col gap-6 items-center justify-center py-12">
-          <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400">You haven't gone on any runs yet today.</p>
-          <%= link_to 'New run', new_run_path, class: 'btn btn-primary' %>
+          <% if @user == current_user %>
+            <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400">You haven't gone on any runs yet today.</p>
+            <%= link_to 'New run', new_run_path, class: 'btn btn-primary' %>
+          <% else %>
+            <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400"><%= @user.username %> hasn't gone on any runs yet today.</p>
+          <% end %>
         </div>
       <% end %>
     </div>
   </div>
+
+  <% runs_this_week = @user.runs_in_date_range(Date.current.beginning_of_week..Date.current).excluding_date(Date.today) %>
 
   <div class="mb-24">
     <div class="flex flex-wrap gap-6 items-center justify-between mt-10 pb-6 border-b dark:border-slate-700">
       <h1 class="heading">Runs This Week</h1>
     </div>
     <div class="divide-y dark:divide-slate-700 dark:text-slate-700 mb-10">
-      <% @user.runs_in_date_range(Date.current.beginning_of_week..Date.current).excluding_date(Date.today).each do |run| %>
-        <div class="py-3">
-          <%= render run %>
-          <%= link_to "View run", run, class: "btn-link inline-block my-3" %>
+      <% if runs_this_week.any? %>
+        <% runs_this_week.each do |run| %>
+          <div class="py-3">
+            <%= render run %>
+            <%= link_to "View run", run, class: "btn-link inline-block my-3" %>
+          </div>
+        <% end %>
+      <% else %>
+        <div class="flex flex-col gap-6 items-center justify-center py-12">
+          <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400"><%= @user == current_user ? "You haven't gone on any runs yet this week." : "#{@user.username} hasn't gone on any runs yet this week." %></p>
+        </div>
+      <% end %>
+    </div>
+  </div>
+
+  <% runs_last_week = @user.runs_in_date_range((Date.current - 1.week).beginning_of_week..(Date.current - 1.week)).excluding_date(Date.today) %>
+
+  <div class="mb-24">
+    <div class="flex flex-wrap gap-6 items-center justify-between mt-10 pb-6 border-b dark:border-slate-700">
+      <h1 class="heading">Runs Last Week</h1>
+    </div>
+    <div class="divide-y dark:divide-slate-700 dark:text-slate-700 mb-10">
+      <% if runs_last_week.any? %>
+        <% runs_last_week.each do |run| %>
+          <div class="py-3">
+            <%= render run %>
+            <%= link_to "View run", run, class: "btn-link inline-block my-3" %>
+          </div>
+        <% end %>
+      <% else %>
+        <div class="flex flex-col gap-6 items-center justify-center py-12">
+          <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400"><%= @user == current_user ? "You didn't go on any runs last week." : "#{@user.username} didn't go on any runs last week." %></p>
         </div>
       <% end %>
     </div>
