--- a/app/assets/stylesheets/custom/buttons.css
+++ b/app/assets/stylesheets/custom/buttons.css
@@ -1,6 +1,6 @@
 @layer components {
   .btn {
-    @apply py-2 px-4 font-medium text-sm text-center rounded focus:ring-2 transition ease-in-out duration-300 no-underline inline-flex items-center justify-center cursor-pointer;
+    @apply py-2 px-4 font-medium text-sm text-center rounded-md focus:ring-2 transition ease-in-out duration-300 no-underline inline-flex items-center justify-center cursor-pointer;
 
     &.btn-lg {
       @apply py-3 px-5 text-lg;
