--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,6 +1,6 @@
 <div class="hidden h-full flex-[0.3] min-w-72 md:block">
   <!-- left sidebar -->
-  <nav class="h-full flex flex-col py-8 px-6 gap-1 backdrop-blur-md bg-slate-50/75 dark:bg-slate-800/75 border-r dark:border-slate-700">
+  <nav class="h-full flex flex-col py-8 px-6 gap-1 backdrop-blur-sm bg-slate-50/85 dark:bg-slate-800/85 border-r dark:border-slate-700">
     <div class="font-bold text-xl mb-4 px-3">
       <span class="text-indigo-500">Team</span><span>Runner</span>
     </div>
