--- a/app/views/shared/_tab_bar.html.erb
+++ b/app/views/shared/_tab_bar.html.erb
@@ -1,4 +1,4 @@
-<div class="fixed inset-x-0 bottom-0 w-full block backdrop-blur-sm bg-slate-50/85 dark:bg-slate-800/85 border-t dark:border-slate-700 pb-1 px-4 md:hidden">
+<div class="fixed inset-x-0 bottom-0 w-full block backdrop-blur-sm bg-slate-50/85 dark:bg-slate-800/85 border-t dark:border-slate-700 pb-1 md:hidden">
   <nav class="grid grid-cols-5 place-items-center gap-y-4 w-full">
   <% links = tab_links %>
   <% first_two_links, last_two_links = links[0, 2], links[-2, 2] %>
@@ -9,7 +9,7 @@
       <% end %>
     <% end %>
 
-    <%= link_to new_run_path, aria: { current: current_page?(new_run_path) ? 'page' : nil }, class: 'relative flex flex-col items-center justify-center text-white text-sm px-6 flex-grow' do %>
+    <%= link_to new_run_path, aria: { current: current_page?(new_run_path) ? 'page' : nil }, class: 'relative flex flex-col items-center justify-center text-white text-sm flex-grow' do %>
       <div class='relative bottom-10 p-4 rounded-full border-4 border-white dark:border-slate-900 bg-indigo-600 shadow-lg'>
         <svg
           xmlns="http://www.w3.org/2000/svg"
