--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,158 +1,21 @@
-<div class="max-w-3xl mx-auto px-4 my-10">
-  <div class="mb-4 pb-6 border-b border-slate-200 dark:border-slate-700">
-    <div class="flex items-center justify-between">
-      <h1 class="heading">Account</h1>
-    </div>
+<div data-controller="tabs" data-tabs-active-class="text-slate-900 dark:text-slate-200 bg-slate-200 dark:bg-slate-700/70" data-tabs-default-tab-value="tab1" class="max-w-3xl mx-auto px-4 my-10">
+  <div class="flex items-center gap-2 bg-slate-50/85 dark:bg-slate-800/85 p-2 rounded-md mb-6 border dark:border-slate-700 overflow-x-auto">
+    <button type="button" id="tab1" data-tabs-target="btn" data-action="click->tabs#select" class="rounded-lg py-2 px-4 flex items-center gap-3 hover:bg-slate-200 dark:hover:bg-slate-700/70">
+      <%= inline_svg_tag 'icons/settings.svg', class: 'size-6' %>
+      <span>Settings</span>
+    </button>
+
+    <button type="button" id="tab2" data-tabs-target="btn" data-action="click->tabs#select" class="rounded-lg py-2 px-4 flex items-center gap-3 hover:bg-slate-200 dark:hover:bg-slate-700/70">
+      <%= inline_svg_tag 'icons/profile.svg', class: 'size-6' %>
+      <span>Account</span>
+    </button>
   </div>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div class="bg-blue-50/90 text-blue-700 border-l-4 border-blue-700 py-4 pr-4 pl-6 text-sm dark:bg-blue-50/10 dark:text-blue-50 dark:border-blue-400 mt-6">
-      <p class="text-blue-800 dark:text-blue-400 ">Currently waiting on confirmation for: <span class="font-semibold"><%= resource.unconfirmed_email %></span></p>
-    </div>
-  <% end %>
-
-  <div class="my-6">
-    <h2 class="font-normal text-lg text-slate-700 dark:text-slate-200 mb-2">Profile</h2>
-    <p class="text-sm text-slate-600 dark:text-slate-400">This information will be displayed publicly.</p>
+  <div id="tab1" data-tabs-target="tab">
+    <%= render 'users/edit_settings' %>
   </div>
 
-  <%= form_for resource, as: resource_name, url: registration_path(resource_name), data: { controller: "form-validation" }, html: { method: :put, novalidate: true } do |f| %>
-    <%= render "devise/shared/error_messages", resource: resource %>
-
-    <div class="form-group">
-      <%= f.label :display_name, class: "form-label" do %>
-        <p> Display name
-          <span class="help-text">(optional)</span>
-        </p>
-      <% end %>
-      <%= f.text_field :display_name, class: "form-input", data: { form_validation_target: "displayName", action: "input->form-validation#validateDisplayName" } %>
-      <span class="error-message hidden my-1" data-form-validation-target="displayNameError">Display name must be 100 characters or less</span>
-    </div>
-
-    <div class='form-group'>
-      <%= f.label :username, class: "form-label" %>
-      <%= f.text_field :username, autocomplete: 'username', class: "form-input", data: { form_validation_target: "username", action: "input->form-validation#validateUsername" } %>
-      <span class="error-message hidden my-1" data-form-validation-target="usernameError">Username can only contain lowercase letters, numbers, underscores, and periods and must be at least 3 characters long</span>
-    </div>
-
-    <div class="py-10 mt-6 border-t border-slate-200 dark:border-slate-700">
-      <h2 class="font-normal text-lg text-slate-700 dark:text-slate-200 mb-2">Personal details</h2>
-      <p class="text-sm text-slate-600 dark:text-slate-400">This information will not be displayed publicly.</p>
-    </div>
-
-    <div class='form-group'>
-      <%= f.label :email, class: "form-label" %>
-      <%= f.email_field :email, autocomplete: "email", class: "form-input", data: { form_validation_target: "email", action: "input->form-validation#validateEmail" } %>
-      <span class="error-message hidden my-1" data-form-validation-target="emailError">Invalid email address</span>
-      <div class="flex items-center gap-2 mt-2">
-        <%= hidden_field_tag 'user[settings][email_visible]', 'false' %>
-        <%= f.fields_for :settings do |settings_form| %>
-          <%= settings_form.check_box :email_visible, { checked: @user.settings(:privacy).email_visible, class: 'form-input-checkbox' }, true, false %>
-          <%= settings_form.label :email_visible, 'Display email to other users', class: 'select-none text-sm' %>
-        <% end %>
-      </div>
-    </div>
-
-    <div class="form-group">
-      <%= f.label :phone_number, class: "form-label" do %>
-        <p> Phone number
-          <span class="help-text">(optional)</span>
-        </p>
-      <% end %>
-      <%= f.telephone_field :phone_number, autocomplete: 'tel', class: 'form-input', data: { form_validation_target: "phone", action: "input->form-validation#validatePhone input->form-validation#filterPhoneInput" } %>
-      <span class="error-message hidden my-1" data-form-validation-target="phoneError">Invalid phone number</span>
-      <div class="flex items-center gap-2 mt-2">
-        <%= hidden_field_tag 'user[settings][phone_visible]', 'false' %>
-        <%= f.fields_for :settings do |settings_form| %>
-          <%= settings_form.check_box :phone_visible, { checked: @user.settings(:privacy).phone_visible, class: 'form-input-checkbox' }, true, false %>
-          <%= settings_form.label :phone_visible, 'Display phone number to other users', class: 'select-none text-sm' %>
-        <% end %>
-      </div>
-    </div>
-
-    <div class="form-group">
-      <%= f.label :gender, class: 'form-label' do %>
-        <p> Gender
-          <span class="help-text">(optional)</span>
-        </p>
-      <% end %>
-      <%= f.select :gender, User.genders.keys.map { |gender| [gender.humanize, gender] }, { include_blank: true }, class: 'form-select' %>
-      <p class="help-text my-1">Leave this blank if you don't want to specify your gender.</p>
-    </div>
-
-    <div class='form-group relative'>
-      <%= f.label :password, class: "form-label" do %>
-        <p> New password
-          <span class="help-text">(optional)</span>
-        </p>
-      <% end %>
-
-      <div class="flex items-center" data-controller="password-visibility">
-        <%= f.password_field :password, autocomplete: "new-password", class: 'form-input w-full', data: { form_validation_target: "newPassword", action: "input->form-validation#validateNewPassword input->form-validation#validateNewPasswordConfirmation", password_visibility_target: "password" } %>
-        <button type="button" class="-ml-9" data-action="password-visibility#toggle">
-          <%= inline_svg_tag 'icons/eye.svg', data: { password_visibility_target: 'visibleIcon' }, class: 'size-6' %>
-          <%= inline_svg_tag 'icons/eye-slash.svg', data: { password_visibility_target: 'hiddenIcon' }, class: 'size-6 hidden' %>
-        </button>
-      </div>
-
-      <p class="help-text my-1">Leave this blank if you don't want to change your password.</p>
-      <div class="hidden" data-form-validation-target="passwordRequirements">
-        <p class="help-text my-1">Password must contain:</p>
-        <div class="ml-3">
-          <p class="help-text my-1" data-form-validation-target="passwordLength"><span class="hidden" data-form-validation-target="lengthCheck">&#10004;</span> <span class="hidden" data-form-validation-target="lengthCross">&times;</span> At least 6 characters</p>
-          <p class="help-text my-1" data-form-validation-target="passwordUppercase"><span class="hidden" data-form-validation-target="uppercaseCheck">&#10004;</span> <span class="hidden" data-form-validation-target="uppercaseCross">&times;</span> At least 1 uppercase letter</p>
-          <p class="help-text my-1" data-form-validation-target="passwordLowercase"><span class="hidden" data-form-validation-target="lowercaseCheck">&#10004;</span> <span class="hidden" data-form-validation-target="lowercaseCross">&times;</span> At least 1 lowercase letter</p>
-          <p class="help-text my-1" data-form-validation-target="passwordDigit"><span class="hidden" data-form-validation-target="digitCheck">&#10004;</span> <span class="hidden" data-form-validation-target="digitCross">&times;</span> At least 1 digit</p>
-          <p class="help-text my-1" data-form-validation-target="passwordSpecial"><span class="hidden" data-form-validation-target="specialCheck">&#10004;</span> <span class="hidden" data-form-validation-target="specialCross">&times;</span> At least 1 special character (#?!@$%^&*-)</p>
-        </div>
-      </div>
-    </div>
-
-    <div class='form-group relative'>
-      <%= f.label :password_confirmation, 'Confirm new password', class: "form-label transition duration-300 ease-in-out", data: { form_validation_target: 'newPasswordConfirmationLabel' } %>
-      <div class="flex items-center" data-controller="password-visibility">
-        <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-input transition duration-300 ease-in-out", data: { form_validation_target: "newPasswordConfirmation", action: "input->form-validation#validateNewPasswordConfirmation", password_visibility_target: "password" } %>
-
-        <button type="button" class="-ml-9" data-action="password-visibility#toggle">
-          <%= inline_svg_tag 'icons/eye.svg', data: { password_visibility_target: 'visibleIcon' }, class: 'size-6' %>
-          <%= inline_svg_tag 'icons/eye-slash.svg', data: { password_visibility_target: 'hiddenIcon' }, class: 'size-6 hidden' %>
-        </button>
-      </div>
-
-      <span class="error-message hidden my-1" data-form-validation-target="newPasswordConfirmationError">Passwords do not match</span>
-      <p class="text-xs text-slate-700 my-1 dark:text-slate-400 transition-opacity duration-300 ease-in-out" data-form-validation-target="newPasswordConfirmationHint">Enter your new password again to confirm it.</p>
-    </div>
-
-    <div class='form-group'>
-      <%= f.label :current_password, 'Current password', class: "form-label" %>
-      <div class="flex items-center" data-controller="password-visibility">
-        <%= f.password_field :current_password, autocomplete: "current-password", class: "form-input w-full", data: { password_visibility_target: "password" } %>
-
-        <button type="button" class="-ml-9" data-action="password-visibility#toggle">
-          <%= inline_svg_tag 'icons/eye.svg', data: { password_visibility_target: 'visibleIcon' }, class: 'size-6' %>
-          <%= inline_svg_tag 'icons/eye-slash.svg', data: { password_visibility_target: 'hiddenIcon' }, class: 'size-6 hidden' %>
-        </button>
-      </div>
-      <p class="text-xs text-slate-700 my-1 dark:text-slate-400">Your current password is required to update your account.</p>
-    </div>
-
-    <div class="flex items-center space-x-4 pt-10 border-t mt-10 border-slate-200 dark:border-slate-700">
-      <%= f.submit "Update", class: "btn btn-primary" %>
-      <%= link_to "Cancel", :back, class: "btn btn-white", data: { turbo: false } %>
-    </div>
-  <% end %>
-
-  <div class="flex justify-end mt-3">
-    <%= button_to "Cancel account", registration_path(resource_name),
-                  method: :delete,
-                  class: "text-slate-400 hover:text-slate-600 font-semibold text-sm",
-                  form: {
-                    data: {
-                      turbo: false,
-                      controller: 'confirmation',
-                      action: 'submit->confirmation#confirm',
-                      confirmation_message_value: "Are you sure you want to delete your account? This action cannot be undone."
-                    }
-                  } %>
+  <div id="tab2" data-tabs-target="tab" class="hidden">
+    <%= render 'edit_user' %>
   </div>
 </div>
