--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -16,19 +16,23 @@
 
   <div class="flex flex-wrap items-center gap-1.5 bg-slate-50/85 dark:bg-slate-800/85 p-1.5 rounded-md mb-6 border dark:border-slate-700 overflow-x-auto">
     <button type="button" id="infoTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab">
+      <%= inline_svg_tag 'icons/info.svg', class: 'size-5' %>
       <span>Team Info</span>
     </button>
 
     <button type="button" id="membersTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab">
+      <%= inline_svg_tag 'icons/team.svg', class: 'size-5' %>
       <span>Team Members</span>
     </button>
 
     <% if current_user.owns?(@team) %>
       <button type="button" id="joinRequestsTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab">
+        <%= inline_svg_tag 'icons/user-plus.svg', class: 'size-5' %>
         <span>Join Requests</span>
       </button>
 
       <button type="button" id="settingsTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab">
+        <%= inline_svg_tag 'icons/settings.svg', class: 'size-5' %>
         <span>Team Settings</span>
       </button>
     <% end %>
