--- a/app/views/devise/registrations/_edit_user.html.erb
+++ b/app/views/devise/registrations/_edit_user.html.erb
@@ -139,7 +139,7 @@
         <%= inline_svg_tag 'icons/eye-slash.svg', data: { password_visibility_target: 'hiddenIcon' }, class: 'size-6 hidden' %>
       </button>
     </div>
-    <p class="text-xs text-slate-700 my-1 dark:text-slate-400">Your current password is required to update your account.</p>
+    <p class="text-xs text-slate-700 my-1 dark:text-slate-400">Your current password is required to change your password.</p>
   </div>
 
   <div class="flex items-center space-x-4 pt-10 border-t mt-10 border-slate-200 dark:border-slate-700">
