--- a/app/views/devise/registrations/_edit_user.html.erb
+++ b/app/views/devise/registrations/_edit_user.html.erb
@@ -55,9 +55,9 @@
     </div>
 
     <% if resource.avatar.attached? %>
-      <div class="flex items-center gap-2 mt-2">
+      <div class="flex items-center gap-2 mt-3">
         <%= f.check_box :remove_avatar, class: 'form-input-checkbox', data: { image_preview_target: 'removeAvatarCheckbox', action: 'image-preview#selectCheckbox' } %>
-        <%= f.label :remove_avatar, 'Remove profile photo', class: 'select-none text-sm' %>
+        <%= f.label :remove_avatar, 'Remove profile photo', class: 'select-none text-sm text-slate-700 dark:text-slate-300' %>
       </div>
     <% end %>
   </div>
