--- a/app/views/teams/forms/_form.html.erb
+++ b/app/views/teams/forms/_form.html.erb
@@ -26,30 +26,28 @@
     <p class="my-1 help-text">Maximum 500 characters</p>
   </div>
 
-  <% unless form.object.new_record? %>
-    <div data-controller="image-preview" class="form-group">
-      <%= form.label :photo, class: 'form-label' do %>
-        <p> Profile photo
-          <span class="help-text">(optional)</span>
-        </p>
-      <% end %>
+  <div data-controller="image-preview" class="form-group">
+    <%= form.label :photo, class: 'form-label' do %>
+      <p> Team photo
+        <span class="help-text">(optional)</span>
+      </p>
+    <% end %>
 
-      <div class="flex items-center gap-x-4">
-        <%= image_tag(@team.photo.attached? ? @team.photo.variant(resize_to_limit: [100, 100]).processed : '', data: { image_preview_target: 'output' }, class: "size-24 rounded-md drop-shadow-lg dark:drop-shadow-none object-cover #{@team.photo.blank? ? 'hidden' : ''}") %>
-        <div class="space-y-2">
-          <%= form.file_field :photo, accept: 'image/png, image/jpeg', class: 'form-file', data: { image_preview_target: 'input', action: 'image-preview#readURL' } %>
-          <button type="button" class="btn btn-white" data-image-preview-target="clearBtn" data-action="image-preview#clearUpload">Clear upload</button>
-        </div>
+    <div class="flex items-center gap-x-4">
+      <%= image_tag(@team.photo.attached? ? @team.photo.variant(resize_to_limit: [100, 100]).processed : '', data: { image_preview_target: 'output' }, class: "size-24 rounded-md drop-shadow-lg dark:drop-shadow-none object-cover #{@team.photo.blank? ? 'hidden' : ''}") %>
+      <div class="space-y-2">
+        <%= form.file_field :photo, accept: 'image/png, image/jpeg', class: 'form-file', data: { image_preview_target: 'input', action: 'image-preview#readURL' } %>
+        <button type="button" class="btn btn-transparent" data-image-preview-target="clearBtn" data-action="image-preview#clearUpload">Clear upload</button>
       </div>
-
-      <% if @team.photo.attached? %>
-        <div class="flex items-center gap-2 mt-2">
-          <%= form.check_box :remove_photo, class: 'form-input-checkbox', data: { image_preview_target: 'removephotoCheckbox', action: 'image-preview#selectCheckbox' } %>
-          <%= form.label :remove_photo, 'Remove profile photo', class: 'select-none text-sm' %>
-        </div>
-      <% end %>
     </div>
-  <% end %>
+
+    <% if @team.photo.attached? %>
+      <div class="flex items-center gap-2 mt-2">
+        <%= form.check_box :remove_photo, class: 'form-input-checkbox', data: { image_preview_target: 'removephotoCheckbox', action: 'image-preview#selectCheckbox' } %>
+        <%= form.label :remove_photo, 'Remove profile photo', class: 'select-none text-sm' %>
+      </div>
+    <% end %>
+  </div>
 
   <div class="pt-6 my-6 border-t border-slate-200 dark:border-slate-700">
     <h2 class="mb-2 text-lg font-normal text-slate-700 dark:text-slate-200">Season</h2>
