--- a/app/views/teams/forms/_edit_team.html.erb
+++ b/app/views/teams/forms/_edit_team.html.erb
@@ -18,50 +18,16 @@
   class="p-6 border rounded-lg shadow-md bg-slate-50/85 dark:bg-slate-800/85 dark:shadow-none dark:border-slate-700"
 >
   <div class="flex flex-wrap gap-4 items-center justify-between">
-    <div>
+    <div class="max-w-md">
       <p class="font-bold">Delete this team</p>
-      <p class="help-text">Once you delete this team, there is no going back.</p>
+      <p class="help-text">Deleting this team will permanently remove all associated data. This action cannot be undone.</p>
     </div>
 
     <!-- Open Delete Team Modal Button -->
-    <button data-action="click->modal#open" data-modal-id="deleteTeamModal" class="btn btn-destructive whitespace-nowrap">
+    <button data-action="click->modal#open" data-modal-id="deleteTeam" class="btn btn-destructive whitespace-nowrap">
       Delete team
     </button>
   </div>
 
-  <!-- Delete Team Modal Backdrop -->
-  <div
-    data-modal-target="backdrop"
-    data-modal-id="deleteTeamModal"
-    data-action="click->modal#backdropClose"
-    class="modal-backdrop opacity-0 pointer-events-none"></div>
-
-  <!-- Delete Team Modal -->
-  <div
-    id="deleteTeamModal"
-    role="dialog"
-    tabindex="-1"
-    data-modal-target="modal"
-    class="modal opacity-0 pointer-events-none"
-  >
-    <div class="flex flex-col space-y-1.5 text-center sm:text-left">
-      <h2 class="text-lg font-semibold leading-none tracking-tight">Delete Team?</h2>
-      <p class="text-soft text-sm">Are you sure you want to delete this team? This action cannot be undone.</p>
-    </div>
-
-    <div class="flex flex-col-reverse sm:flex-row sm:justify-end sm:space-x-2 mt-4">
-      <button data-action="click->modal#close" data-modal-id="deleteTeamModal" type="button" class="btn btn-white mt-2 sm:mt-0">Cancel</button>
-      <%= button_to 'Delete team',
-                    @team,
-                    method: :delete,
-                    data: { turbo: false },
-                    class: 'btn btn-destructive font-bold w-full whitespace-nowrap'
-      %>
-    </div>
-
-    <button data-action="click->modal#close" type="button" data-modal-id="deleteTeamModal" class="modal-x-btn">
-      <%= inline_svg_tag 'icons/x-mark.svg', class: 'size-4' %>
-      <span class="sr-only">Close</span>
-    </button>
-  </div>
+  <%= render 'teams/shared/delete_team_modal', team: @team %>
 </div>
