--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -78,41 +78,7 @@
             </div>
           </div>
 
-          <!-- Delete Team Modal Backdrop -->
-          <div
-            data-modal-target="backdrop"
-            data-modal-id="deleteTeam"
-            data-action="click->modal#backdropClose"
-            class="modal-backdrop opacity-0 pointer-events-none"></div>
-
-          <!-- Delete Team Modal -->
-          <div
-            id="deleteTeam"
-            role="dialog"
-            tabindex="-1"
-            data-modal-target="modal"
-            class="modal opacity-0 pointer-events-none"
-          >
-            <div class="flex flex-col space-y-1.5 text-center sm:text-left">
-              <h2 class="text-lg font-semibold leading-none tracking-tight">Delete Team?</h2>
-              <p class="text-soft text-sm">Are you sure you want to delete this team? This action cannot be undone.</p>
-            </div>
-
-            <div class="flex flex-col-reverse sm:flex-row sm:justify-end sm:space-x-2 mt-4">
-              <button data-action="click->modal#close" data-modal-id="deleteTeam" type="button" class="btn btn-white mt-2 sm:mt-0">Cancel</button>
-              <%= button_to 'Delete team',
-                            @team,
-                            method: :delete,
-                            data: { turbo: false },
-                            class: 'btn btn-destructive font-bold w-full whitespace-nowrap'
-              %>
-            </div>
-
-            <button data-action="click->modal#close" type="button" data-modal-id="deleteTeam" class="modal-x-btn">
-              <%= inline_svg_tag 'icons/x-mark.svg', class: 'size-4' %>
-              <span class="sr-only">Close</span>
-            </button>
-          </div>
+          <%= render 'teams/shared/delete_team_modal', team: @team %>
         </div>
       <% else %>
         <%= render 'teams/shared/team_buttons', team: @team %>
