--- a/app/views/runs/show.html.erb
+++ b/app/views/runs/show.html.erb
@@ -82,7 +82,7 @@
           >
             <div class="flex flex-col space-y-1.5 text-center sm:text-left">
               <h2 class="text-lg font-semibold leading-none tracking-tight">Delete Run?</h2>
-              <p class="text-soft text-sm">Are you sure you want to delete this run? This action cannot be undone.</p>
+              <p class="text-soft text-sm">Are you sure you want to delete this <span class="font-bold"><%= @run.distance %> mile run</span>? This action cannot be undone.</p>
             </div>
 
             <div class="flex flex-col-reverse sm:flex-row sm:justify-end sm:space-x-2 mt-4">
